# Attandease_Application-Unispark

./: README.md  ca.pem  package-lock.json  schema.sql
AttendeaseAdmin/: index.html  package-lock.json  package.json  vite.config.js
AttendeaseAdmin/src/: App.jsx  index.css  main.jsx
AttendeaseAdmin/src/components/: AddNewEmployeeForm.jsx  AdminProfile.jsx  AttendanceReport.jsx  DailyAttendance.jsx  Dashboard.jsx  Employees.jsx  HolidaysManagement.jsx  LeaveManagement.jsx  LoadingSpinner.jsx  Login.jsx  SideBar.jsx  (+1 more)
Backend/: .gitignore  Server.js  attendease_database.sql  cloudConfig.js  full_database_dump.sql  load-test.js  package-lock.json  package.json  seed_data.sql
Backend/config/: redis.js
Backend/services/: GraphService.js
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx
SparkAgenticAI/: .gitignore  pyproject.toml
SparkAgenticAI/ai_service/app/: config.py  main.py  router.py
SparkAgenticAI/ai_service/app/agents/: workflow_agent.py
SparkAgenticAI/ai_service/app/middleware/: auth_context.py  error_handler.py  permissions.py
SparkAgenticAI/ai_service/app/schemas/: audit.py  chat.py  helpdesk.py  kb.py  m365.py  tool_result.py  workflow.py
SparkAgenticAI/ai_service/app/service/: agent_hooks.py  agent_logger.py  audit_logger.py  groq_text.py  helpdesk_client.py  hrms_client.py  kb_client.py  m365_client.py  workflow_manager.py
SparkAgenticAI/ai_service/app/tools/: helpdesk_tools.py  hrms_tools.py  kb_tools.py  m365_tools.py
SparkHR-MobileApp/: app.json  babel.config.js  package-lock.json  package.json  tsconfig.json
(+67 files in other folders)
