[project]
name = "sparkagenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.0",
    "groq>=1.5.0",
    "httpx>=0.28.1",
    "openai-agents>=0.17.6",
    "pydantic>=2.13.4",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
